Initial portfolio version

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                 <div class="about__photo-wrapper slide-in-right">
                     <div class="about__photo-overlay"></div>
-                    <img src="assets/img/khea-portrait.jpg" alt="Portrait of Khea Cyrielle O. Moral" class="about__photo" />
+                    <img src="assets/img/khea-portrait.JPG" alt="Portrait of Khea Cyrielle O. Moral" class="about__photo" />
                 </div>
             </div>
         </section>
