--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
+                            <li>C</li>
                             <li>Python</li>
                         </ul>
                     </article>
@@ -136,6 +137,9 @@
                             <li>Communication</li>
                             <li>Teamwork</li>
                             <li>Adaptability</li>
+                            <li>Problem Solving</li>
+                            <li>Time Management</li>
+                            <li>Collaboration</li>
                         </ul>
                     </article>
 
@@ -145,7 +149,11 @@
                         <ul class="skill-card__list">
                             <li>VS Code</li>
                             <li>Git</li>
+                            <li>GitHub</li> 
                             <li>Canva</li>
+                            <li>CapCut</li>
+                            <li>Linux</li>
+                            <li>Docker</li>
                         </ul>
                     </article>
                 </div>
